--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ html, body, .App, #root {
 .app_container {
   display: flex;
   flex-direction: column;
+  gap: 2.5rem;
   margin:  auto;
 }
 
@@ -64,6 +65,10 @@ html, body, .App, #root {
 .app_list {
   width: 500px;
   height: 200px;
+}
+
+.app_virtualized-list {
+  height: 100px;
 }
 
 @keyframes App-logo-spin {
