--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   --fixed-column: #f3f3f3;
   --header-text: #343434;
   --table-border: #c3c3c3;
+  --accent-colour: #C0EDB9;
+  --primary-colour: #707070;
+  --primary-colour--68: rgba(112, 112, 112, 0.24);
+  --accent-colour--62: rgba(192, 237, 185, 0.62);
 }
 
 @font-face {
@@ -69,6 +73,9 @@ html, body, .App, #root {
 
 .app_virtualized-list {
   height: 100px;
+}
+
+.app_select {
 }
 
 @keyframes App-logo-spin {
