--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -45,7 +45,10 @@
   border: 1px solid var(--primary-colour);
   border-left: 0;
   border-radius: 0 6px 6px 0;
-  padding: 10px 8px 10px 8px;
+  width: 1.6rem;
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
 }
 
 .search-panel__button:hover {
@@ -72,3 +75,18 @@
   clip-path: inset(0px 100% 100% 100%);
 
 }
+
+.select__select-panel {
+  margin-bottom: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  overflow-x: auto;
+  gap: 0.75rem;
+}
+
+.select__select-panel__icon {
+  width:0.75rem;
+  height: 0.75rem;
+}
+
