--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -2,7 +2,7 @@
   border: var(--table-border) solid 0.0625rem;
   /*border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;*/
   border-radius: 5px;
-  box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+  /*box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);*/
 }
 
 .table {
