--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -78,13 +78,39 @@
 
 .select__select-panel {
   margin-bottom: 0.5rem;
+  padding: 0.1875rem;
   display: flex;
   flex-direction: row;
   overflow: hidden;
   overflow-x: auto;
   gap: 0.75rem;
+  /*position: relative;*/
+}
+.select__select-panel__window {
+  position: relative;
 }
 
+.before::before{
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: -2px;
+  pointer-events: none;
+  background: linear-gradient(90deg, #FFFFFF 0%, transparent 100%);
+}
+
+.after::after{
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  content: "";
+  top: 0;
+  right: -1px;
+  pointer-events: none;
+  background: linear-gradient(90deg, transparent 0%, #FFFFFF 100%);
+}
 .select__select-panel__icon {
   width:0.75rem;
   height: 0.75rem;
