--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   font-size: 100%;
   --fixed-column: #f3f3f3;
   --header-text: #343434;
-  --table-border: #c3c3c3;
+  --table-border: #E0E0E0;;
   --accent-colour: #C0EDB9;
   --primary-colour: #707070;
   --primary-colour--68: rgba(112, 112, 112, 0.68);
