--- a/src/components/SwitchOption/SwitchOption.css
+++ b/src/components/SwitchOption/SwitchOption.css
@@ -1,8 +1,14 @@
 .switch-option {
   flex: 1;
   padding: 1rem;
+
+  background-color: rgba(255, 255, 255, 0);
+  transition: background-color .5s ease;
 }
 
+.switch-option__label:focus-within {
+  background-color: var(--accent-colour--62);
+}
 .switch-option__choice {
   width: 0;
   height: 0;
