--- a/src/components/OptionCard/OptionCard.css
+++ b/src/components/OptionCard/OptionCard.css
@@ -16,12 +16,21 @@
   border-radius: 0.25rem;
 }
 
-.option-card__label:hover {
+.option-card:hover {
   border: 1px solid var(--accent-colour);
+  border-radius: 0.25rem;
+}
+
+.option-card:focus-within {
+  border: 1px solid var(--accent-colour);
+  border-radius: 0.25rem;
 }
 
 .option-card__input {
   width: 0;
+  height: 0;
+  display: block;
+  -webkit-appearance: none;
 }
 
 .option-card__icon {
